# openpose_ros

./: .gitignore  README.org
openpose_ros/: CMakeLists.txt  package.xml
openpose_ros/include/: openpose_action.h  openpose_ros_io.h
openpose_ros/launch/: openpose_ros.launch  openpose_ros_action_tum.launch  openpose_ros_kinect.launch  openpose_ros_tum.launch
openpose_ros/src/: gflags_options.cpp  openpose_action.cpp  openpose_ros_action_node.cpp
openpose_ros_msgs/: CMakeLists.txt  package.xml
openpose_ros_msgs/action/: OpenPoseHumanList.action
